--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Tiny Green Cube</title>
-    <link rel="stylesheet" href="https://pyscript.net/releases/2025.1.1/core.css">
-    <script type="module" src="https://pyscript.net/releases/2025.1.1/core.js"></script>
+    <!-- ВАЖНО: Используйте версию 2024.1.1 или новее -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/pyscript/latest/pyscript.css">
+    <script defer src="https://cdn.jsdelivr.net/pyscript/latest/pyscript.js"></script>
 </head>
 <body style="margin: 0; padding: 20px; background: #87CEEB;">
     
@@ -23,4 +24,5 @@ import platformer
     </py-script>
     
 </body>
+
 </html>
