--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Tiny Green Cube</title>
-    <link rel="stylesheet" href="https://pyscript.net/releases/2025.1.1/core.css">
-    <script type="module" src="https://pyscript.net/releases/2025.1.1/core.js"></script>
+    <link rel="stylesheet" href="https://pyscript.net">
+    <script type="module" src="https://pyscript.net"></script>
 </head>
 <body style="margin: 0; padding: 20px; background: #87CEEB;">
     
@@ -23,3 +23,4 @@
     
 </body>
 </html>
+
