--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <py-config>
         packages = ["pygame-ce"]
         [[fetch]]
-        files = ["platformer.py"]
+        files = ["./platformer.py"]
     </py-config>
 
     <!-- Используем специальный тип для игр -->
@@ -23,4 +23,5 @@
     
 </body>
 </html>
+
 
