--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Tiny Green Cube</title>
-    <!-- ВНИМАНИЕ: Ссылки теперь ведут прямо на файлы .css и .js -->
-    <link rel="stylesheet" href="https://pyscript.net">
-    <script type="module" src="https://pyscript.net"></script>
+    <!-- Используем альтернативный источник (CDN), который реже блокируется -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net">
+    <script type="module" src="https://cdn.jsdelivr.net"></script>
 </head>
 <body style="margin: 0; padding: 20px; background: #87CEEB;">
     
@@ -25,3 +25,4 @@
     
 </body>
 </html>
+
