--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Tiny Green Cube</title>
-    <!-- Используем альтернативный источник (CDN), который реже блокируется -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net">
-    <script type="module" src="https://cdn.jsdelivr.net"></script>
+    <!-- Официальные стабильные ссылки -->
+    <link rel="stylesheet" href="https://pyscript.net/releases/2024.11.1/core.css">
+    <script type="module" src="https://pyscript.net/releases/2024.11.1/core.js"></script>
 </head>
+
 <body style="margin: 0; padding: 20px; background: #87CEEB;">
     
     <div style="width: 810px; height: 610px; border: 5px solid green; margin: 50px auto; background: black;">
@@ -25,4 +26,5 @@
     
 </body>
 </html>
+
 
