--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <py-config>
         packages = ["pygame-ce"]
         [[fetch]]
-        # Используй ./ чтобы GitHub точно нашел файл в корне
-        files = ["./platformer.py"]
+        files = ["platformer.py"]
     </py-config>
 
-    <!-- Используем специальный тип для игр и путь к файлу -->
-    <script type="py-game" src="./platformer.py"></script>
+    <py-script src="platformer.py"></py-script>
+
     
 </body>
 </html>
+
 
 
