Add assets.zip to index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         [[fetch]]
         # Оставляем файл здесь, чтобы PyScript его скачал во внутреннюю память
         files = ["platformer.py"]
+        from_archive = "assets.zip"
     </py-config>
 
 <!-- Убираем src! Пишем просто импорт внутри тега -->
@@ -30,6 +31,7 @@
     
 </body>
 </html>
+
 
 
 
