--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <script src="https://unpkg.com"></script>
     <meta charset="UTF-8">
     <title>Tiny Green Cube</title>
     <!-- Официальные стабильные ссылки -->
