--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <script src="https://unpkg.com"></script>
     <meta charset="UTF-8">
     <title>Tiny Green Cube</title>
+    <script src="https://cdn.jsdelivr.net"></script>
     <!-- Официальные стабильные ссылки -->
     <link rel="stylesheet" href="https://pyscript.net/releases/2024.11.1/core.css">
     <script type="module" src="https://pyscript.net/releases/2024.11.1/core.js"></script>
@@ -29,4 +29,5 @@
     
 </body>
 </html>
+
 
