--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     import asyncio
     import os
     print("Файлы в корне:", os.listdir("."))
-    import platformer 
+    from platformer import main 
     await main()
     </script>
 
@@ -30,6 +30,7 @@
     
 </body>
 </html>
+
 
 
 
