--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     
     <!-- Указываем путь к файлу конфига через атрибут config -->
-    <script type="py" config="./pyscript.json" terminal>
+    <script type="py" config="./pyscript.json" target="canvas" terminal>
     import asyncio
     import os
     print("Файлы в корне:", os.listdir("."))
@@ -30,6 +30,7 @@
     
 </body>
 </html>
+
 
 
 
